objects/VolunteerContactTag__c.object
<CustomObject>
    <description>This is for Disclosure and misconduct of volunteer to include Tags</description>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User contact or any other volunteer contact</description>
        <label>Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Donor, Orphan</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Disclosure</relationshipLabel>
        <relationshipName>VolunteerContactTags1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detail_Notes__c</fullName>
        <description>Detail information for Misconduct &amp; Disclosure</description>
        <label>Detail Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Volunteer_ID__c</fullName>
        <description>Link to volunteer contact</description>
        <label>Volunteer ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Disclosure &amp; Misconduct</relationshipLabel>
        <relationshipName>VolunteerContactTags</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>VolunteerContactTag</label>
    <nameField>
        <displayFormat>TG-{0000}</displayFormat>
        <label>VolunteerContactTag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VolunteerContactTags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>